fix bugs after alignment meeting

--- a/app/assets/stylesheets/pages/_geolocate_user.scss
+++ b/app/assets/stylesheets/pages/_geolocate_user.scss
@@ -53,7 +53,7 @@
     margin: 20px;
   }
 
-  .geolocate_button {
+  &.geolocate_button {
     position: relative;
     background-color: #fdd200;
     border-radius: 5px;
