--- a/app/assets/stylesheets/pages/_new_place.scss
+++ b/app/assets/stylesheets/pages/_new_place.scss
@@ -29,7 +29,7 @@
   }
 }
 
-.picture-mapmaster-active, {
+.picture-mapmaster-active {
   border: 2px solid $green;
 }
 
